plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
//	id "com.github.spotbugs" version "6.0.19"
}

group = 'com.GASB'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'junit:junit:4.13.1'
	implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

//	spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.12.0'

	//database
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'

	//lombok
	annotationProcessor 'org.projectlombok:lombok'
	compileOnly 'org.projectlombok:lombok'

	//test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.mockito:mockito-core'

	//slack
	implementation 'com.slack.api:slack-api-client:1.40.2'

	//json
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'

	//aws
	implementation platform('software.amazon.awssdk:bom:2.21.1')
	implementation 'software.amazon.awssdk:s3'

	//rabbitMQ
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	implementation 'com.rabbitmq:amqp-client'

	//validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'


	//jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5' // or 'io.jsonwebtoken:jjwt-gson:0.11.5' for Gson

	//Apache Tika
	implementation 'org.apache.tika:tika-core:2.9.2'
	implementation 'org.apache.tika:tika-parsers-standard-package:2.9.2'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.assertj:assertj-core:3.24.2'

	testImplementation 'org.mockito:mockito-core'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Spring Security
//	implementation 'org.springframework.boot:spring-boot-starter-security'
//	testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
////spotbugs {
////	toolVersion = '4.8.6'
////}
//tasks.withType(com.github.spotbugs.snom.SpotBugsTask).configureEach {
//	reports {
//		xml.required.set(false)
//		html.required.set(true)
//		html.outputLocation.set(layout.buildDirectory.file("reports/spotbugs/main.html"))
//		html.stylesheet = 'fancy-hist.xsl'
//	}
//	jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
//}
